# pygdal_PG_datasource

./: .gitignore  README.md  SECURITY_TODO.md  TODO.md  params.json  pyproject.toml  pytest.ini
conex/: PG_conex.py  Raster_conex.py  Vector_conex.py  __init__.py  gdal_utils.py  sonoff2Vector_conex.py  sonoff_conex.py  tuyaSmartLife_conex.py
conex/lib_sonoff/: cripto_sonoff.py  peticiones_sonoff.py
conex/lib_tuyaSmartLife/: peticiones_TuyaSmartLife.py
lib/: Exp_Capas.py  Imp_Capas.py  PG_conex.py  Raster_conex.py  Vector_conex.py
procesos/vector/: geoprocesos.py  tematicos.py
test/: puntero_PG.py  puntero_Sonoff.py  puntero_raster.py  puntero_tuyaSmartLife.py  puntero_vector.py
test/files/: devices_sonoff.sqlite
tests/: conftest.py  requirements-test.txt  test_cripto_sonoff.py  test_geojson_query.py  test_pg_conex.py  test_procesos_vector.py  test_sonoff_sqlite.py  test_tuya_datos.py  test_tuya_export.py  test_tuya_peticiones.py  test_vector_conex.py
tests/integration/: conftest.py  helpers.py  test_pg_integracion.py  test_raster_integracion.py  test_sonoff_integracion.py  test_tuya_integracion.py  test_vector_integracion.py
